--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,9 +37,10 @@ jobs:
       - name: Build
         run: pnpm build
         env:
-          NEXT_PUBLIC_SANITY_PROJECT_ID: ${{ secrets.SANITY_PROJECT_ID || 'demo' }}
+          NEXT_PUBLIC_SANITY_PROJECT_ID: demo
           NEXT_PUBLIC_SANITY_DATASET: production
-          NEXT_PUBLIC_POSTHOG_KEY: ${{ secrets.POSTHOG_KEY || 'demo' }}
+          NEXT_PUBLIC_POSTHOG_KEY: demo
+          NEXT_PUBLIC_GA_MEASUREMENT_ID: demo
           NEXT_PUBLIC_SITE_URL: https://makingtheworldmove.com
 
   deploy-production:
@@ -68,9 +69,10 @@ jobs:
       - name: Build
         run: pnpm build
         env:
-          NEXT_PUBLIC_SANITY_PROJECT_ID: ${{ secrets.SANITY_PROJECT_ID || 'demo' }}
+          NEXT_PUBLIC_SANITY_PROJECT_ID: demo
           NEXT_PUBLIC_SANITY_DATASET: production
-          NEXT_PUBLIC_POSTHOG_KEY: ${{ secrets.POSTHOG_KEY || 'demo' }}
+          NEXT_PUBLIC_POSTHOG_KEY: demo
+          NEXT_PUBLIC_GA_MEASUREMENT_ID: demo
           NEXT_PUBLIC_SITE_URL: https://makingtheworldmove.com
           
       - name: Deploy to Azure Static Web Apps
